# forte-api

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: check.yml
src/: authentication.rs  main.rs  persistence.rs  services.rs  types.rs
