[package]
name = "forte"
version = "0.1.0"
edition = "2021"
description = "A minimal messaging api"
readme = "README.md"
repository = "https://github.com/yurevdb/forte-api.git"
authors = ["Yuré Vanderbruggen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
eyre = "0.6.8"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
